Custom--app/main/default/objects/Address__c/fields/StateAbbreviation__c.field-meta.xml
<CustomField>
    <fullName>StateAbbreviation__c</fullName>
    <description>State Abbreviation</description>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>