Custom--app/main/default/objects/Address__c/fields/Validated_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Validated_Date_Time__c</fullName>
    <label>Validated Date Time</label>
    <type>DateTime</type>
</CustomField>