Custom--app/main/default/objects/Address__c/fields/Validated_Successfully__c.field-meta.xml
<CustomField>
    <fullName>Validated_Successfully__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validated Successfully</label>
    <type>Checkbox</type>
</CustomField>