Custom--app/main/default/objects/Address__c/fields/Validation_Message__c.field-meta.xml
<CustomField>
    <fullName>Validation_Message__c</fullName>
    <label>Validation Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>